--- a/wp-content/plugins/tmm_layout_constructor/css/front_effects.css
+++ b/wp-content/plugins/tmm_layout_constructor/css/front_effects.css
@@ -3,12 +3,21 @@
 /* ---------------------------------------------------------------------- */
 
 .section-full-width { 
-	position: relative;
-	overflow: hidden;
-	z-index: 2;
+    overflow: hidden;
+    position: relative;
+    z-index: 6;
+}
+
+.section-full-width.parallax {
+	width: 100%;
+	z-index: 0;
 }
 
 /* Page Header BG */
+
+body {
+	overflow-x: hidden;
+}
 
 .page-header-bg {
 	position: absolute;
@@ -24,12 +33,9 @@
 
 .full-bg-image {
 	position: absolute;
-	bottom: 0;
-	left: 0;
 	width: 100%;
 	height: 100%;
 	background-position: 50% 50%;
-	overflow: hidden;
 }
 
 .no-touch .full-bg-image { background-size: cover; }
