--- a/wp-content/plugins/tmm_shortcodes/css/admin.css
+++ b/wp-content/plugins/tmm_shortcodes/css/admin.css
@@ -140,14 +140,14 @@
 	padding: 5px;
 	border: 1px solid #ccc;
 	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
+	   -moz-border-radius: 4px;
+			border-radius: 4px;
 }
 
 .list-table { width: 100%; }
 
 .list-table td { padding: 10px; }
-
+	
 .tmm_shortcode_template .list-table input { width: 100%; }
 
 .list-items .row-mover {
@@ -203,9 +203,63 @@
 	width: 75px !important;
 }
 
-.tmm_shortcode_template .data-select { padding: 5px 8px; height: 30px;}
+.tmm_shortcode_template .data-select { 
+	height: 32px;
+	line-height: 1.5em;
+    background-color: #fff;
+		cursor: pointer;
 
-.tmm_shortcode_template .data-upload { width: 78.2%; }
+		-webkit-appearance: none;
+		   -moz-appearance: none;
+				appearance: none;
+}
+
+	.tmm_shortcode_template .sel {
+		display: block;
+		margin: 0;
+		position: relative;
+		vertical-align: top;
+		width: 100%;
+	}
+	
+		.tmm_shortcode_template input[type="text"], 
+		.tmm_shortcode_template textarea, 
+		.tmm_shortcode_template select {
+			border: 1px solid #d5d6d6;
+			color: #8f9194;
+			height: auto;
+			margin: 0;
+			outline-width: 0;
+			padding: 7px 10px;
+			vertical-align: top;
+			width: 100%;
+            
+            -moz-box-shadow: none;
+            -webkit-box-shadow: none;
+                    box-shadow: none;
+		}
+		
+		
+			.tmm_shortcode_template .sel:after {
+				background-color: #fff;
+				color: #d5d6d6;
+				content: "\f140";
+				cursor: pointer;
+				display: block;
+				font-family: 'dashicons';
+				font-size: 25px;
+				height: calc(100% - 2px);
+				line-height: 30px;
+				pointer-events: none;
+				position: absolute;
+				right: 1px;
+				top: 1px;
+				transition: color 0.25s linear 0s;
+				width: 30px;
+			}
+	
+
+.tmm_shortcode_template .data-upload { width: 70% !important; margin-right: 5px; }
 
 .tmm_shortcode_template textarea {
 	min-height: 100px;
